# Lab_OOP

Lab1/: CMakeLists.txt  main.cpp
Lab1/include/: closest_pair_tonum.h
Lab1/scr/: closest_pair_tonum.cpp
Lab1/test/: tests01.cpp
Lab2/: CMakeLists.txt  Six.cpp  Six.h  main.cpp  test_six.cpp
Lab3/: CMakeLists.txt  figure.cpp  figure.h  figure_array.h  hexagon.cpp  hexagon.h  main.cpp  pentagon.cpp  pentagon.h  rhombus.cpp  rhombus.h  test_figures.cpp
Lab4/: CMakeLists.txt  array.h  figure.h  main.cpp  point.h
Lab5/: CMakeLists.txt  main.cpp
